--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,5 +20,5 @@ tar = "0.4.40"
 thiserror = "1.0.49"
 aws-smithy-http = "0.56.1"
 http = "0.2.9"
-tracing = "0.1.37"
+tracing = { version = "0.1.37", features = ["attributes"] }
 tracing-subscriber = "0.3.17"
