--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,4 @@ aws-smithy-http = "0.56.1"
 http = "0.2.9"
 tracing = { version = "0.1.37", features = ["attributes"] }
 tracing-subscriber = "0.3.17"
+uuid = { version = "1.4.1", features = ["v4"] }
